<resources>
    // ---------------------:: BY UTILITY ::----------------------
    <!--:: Other indicators ::-->
    <string name="chip_group_indicator">ChipGroup</string>

    <!--:: TAG / LOG / Messages ::-->
    <string name="cancelled_authentication_because_of">The authentication has been cancelled for</string>
    <string name="cancelled_authentication">Operation has failed</string>

    // ---------------------:: BY TYPE OF WIDGETS AND FUNCTIONS ::----------------------

    <!--:: Text Views / Titles / Not Editable ::-->
    <string name="app_name">Real Estate Manager</string>
    <string name="description_title">Description</string>
    <string name="around_title">Around</string>
    <string name="location_of_property_title">Location of property</string>
    <string name="property_for_sale_since_title">For sale</string>
    <string name="property_sold_since_title">Sold</string>
    <string name="add_property_layout_title">Describe the lot</string>
    <string name="add_lot_property_name_title">Property name</string>
    <string name="add_lot_property_type_title">Property type</string>
    <string name="add_lot_property_total_land_area_title">Total land area</string>
    <string name="add_lot_property_total_rooms_title">Total Rooms</string>
    <string name="add_lot_property_address_title">Address</string>
    <string name="add_lot_around_property_title">Around property</string>
    <string name="add_lot_for_sale_since_title">For sale since</string>
    <string name="add_lot_sold_out_since_title">Sold out since</string>
    <string name="rooms_indicator_title">room(s)</string>
    <string name="add_lot_property_description_title">Description</string>
    <string name="add_lot_property_seller_title">Seller</string>
    <string name="add_lot_property_price_title">Price</string>
    <string name="add_lot_property_photo_title">Photos</string>
    <string name="title_search">Search</string>
    <string name="title_type_filter">I\'m searching</string>
    <string name="title_filter_type">Type</string>
    <string name="title_with_at_least">With at least</string>
    <string name="title_filter_rooms">Rooms</string>
    <string name="title_and">and</string>
    <string name="title_filter_price">Price between</string>
    <string name="title_area_between">Area between</string>
    <string name="title_filter_on_sale_since">On sale since</string>
    <string name="title_oops">OOPS</string>
    <string name="title_no_connection_detected">No connection detected</string>
    <string name="title_retry">Retry</string>
    <string name="check_your_internet_connection">Please check your Internet connection</string>
    <string name="no_wifi">no_wifi</string>
    <string name="here">You\'re here</string>

    <!--:: Text Views / Editable ::-->
    <string name="first_property_worth">Le premier bien immobilier enregistré vaut</string>
    <string name="property_name">L\'anglaise</string>
    <string name="property_cost">122 000 $</string>
    <string name="seller_name">By Christophe Duchamps</string>
    <string name="property_status">Available</string>
    <string name="property_properties">House - 4P - 125 m²</string>
    <string name="property_address">Long Island</string>
    <string name="property_description">In a suburban area sought after for its calm and proximity to all shops, kindergartens, primary schools and college.
                                        Detached house built on a total cellar converted into a laundry area, storage space, game room and others, a toilet.
                                        On the ground floor, entrance, hallway, kitchen open to living room of 40 m² with fireplace, shower room with wc, 1 bedroom of 13 m².
                                        Upstairs, large hallway with cupboards, 2 bedrooms of 17 and 21 m² on the ground, 1 wc.
                                        Large garage for 2 vehicles, permanent outbuildings at the bottom of the garden that can be fitted out according to your wishes.
                                        Double glazing, new boiler.
                                        All on a plot of 195 m².
    </string>
    <string name="property_sold_since">--</string>
    <string name="on_sale_date">24/06/2022</string>
    <string name="interest_name">Shop Store</string>
    <string name="form_total_rooms_number_count">1</string>
    <string name="available_status">Available</string>

    <!--:: Content Descriptions / Image Views ::-->
    <string name="content_description_prop_photos">View pager introducing property photos</string>
    <string name="content_description_icon_interest">Icon representing interest</string>
    <string name="content_description_icon_item_property">Icon that gives availability of property according to its color</string>
    <string name="content_description_main_picture_property_item">Main picture property</string>
    <string name="content_description_form_confirm_adding">Confirm adding sign</string>
    <string name="content_description_stop_adding_sign">Cancel adding sign</string>
    <string name="content_description_add_new_property_button">Add new property button</string>
    <string name="content_description_add_new_photo">Photos to add in recycler view</string>
    <string name="content_description_add_first_item_btn">Add first item</string>
    <string name="content_description_view_pager_photo_container">view_pager_photo_container</string>
    <string name="content_description_container_static_maps">container_static_maps</string>
    <string name="content_description_take_photo">Take photo</string>

    <!--:: Hint ::-->
    <string name="hint_property_seller_input">Select the seller name</string>
    <string name="hint_property_name_input">My name is…</string>
    <string name="hint_property_type_input">My type is…</string>
    <string name="hint_property_land_area_input">The living area is…</string>
    <string name="hint_property_address_input">Here is …</string>
    <string name="hint_form_for_sale_since">Since..</string>
    <string name="hint_form_sol_out_since">Since..</string>
    <string name="hint_tell_me_more_about_it_description_property">Tell more about it…</string>
    <string name="hint_property_price_input">My value..</string>
    <string name="hint_filter_rooms_min">1,2,3…</string>
    <string name="hint_filter_area">m²</string>
    <string name="hint_dollars">$</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>

    <!--:: Buttons ::-->
    <string name="form_add_rooms_sign">+</string>
    <string name="form_remove_rooms_sign">-</string>

    <!--:: HelperText ::-->
    <string name="helperText_property_name_input">Example : The sweetest house</string>
    <string name="helperText_property_type_input">Example : House, Apartment, Castle, Room…</string>
    <string name="helperText_property_land_area_input">Living area in square meters</string>
    <string name="helperText_property_address_input">Example: 2250 N Ocean Ave, Farmingville, États-Unis</string>
    <string name="helperText_property_price_input">In dollars $</string>

    <!--:: ChipGroup ::-->
    <string name="chip_string_indicator">Church</string>

    <!--:: Dropdown Menu ::-->
    <string name="dropdown_menu_user_id_indicator">1</string>

    <!--:: CheckBox ::-->
    <string name="checkbox_filter_sold">Sold</string>

    <!--:: Button ::-->
    <string name="btn_title_search">Search</string>
    <string name="content_description_see_map">TODO</string>
    <string name="photo_number">Photo 1</string>
    <string name="hint_enter_description_photo">Bedroom</string>
    <string name="title_give_me_a_title_photo_description">Give me a title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="example">Salon</string>
</resources>
